--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,8 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@feathersjs/authentication-client": "^4.5.15",
+    "@feathersjs/feathers": "^4.5.15",
+    "@feathersjs/socketio-client": "^4.5.15",
+    "@vue/composition-api": "^1.6.2",
     "core-js": "^3.8.3",
+    "feathers-hooks-common": "^6.1.3",
+    "feathers-vuex": "^3.16.0",
     "register-service-worker": "^1.7.2",
+    "socket.io-client": "^2",
+    "util": "^0.12.4",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vuetify": "^2.6.0",
