--- a/backend/package.json
+++ b/backend/package.json
@@ -48,6 +48,7 @@
     "@feathersjs/transport-commons": "^5.0.0-pre.20",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "feathers-authentication-hooks": "^1.0.2",
     "feathers-mongoose": "^8.5.1",
     "helmet": "^4.6.0",
     "mongodb-core": "^3.2.7",
